# Backend_deploy

./: .env.example  .gitignore  Dockerfile  README.md  categories.json  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: cd.yml
config/: __init__.py  asgi.py  celery.py  urls.py  wsgi.py
config/settings/: base.py  dev.py  prod.py  test.py
docs/: ARCHITECTURE.md  MONITORING_SETUP.md  SHOPPING_RESEARCH_TROUBLESHOOTING.md  VERSIONS.md
modules/: __init__.py
modules/categories/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
modules/orders/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
modules/products/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
modules/search/: __init__.py  admin.py  apps.py  exceptions.py  llm_service.py  models.py  prompts.py  serializers.py  services.py  shopping_research_service.py  tasks.py  urls.py  views.py
modules/timers/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
modules/users/: __init__.py  admin.py  apps.py  exceptions.py  models.py  serializers.py  (+4 more)
monitoring/: README.md
requirements/: base.txt  dev.txt  prod.txt
scripts/: clean_products.py  crawl_computer_products.py  entrypoint.sh  init_db.sql  save_all_price_history.py  test_price_history.py  wait_for_db.py
shared/: __init__.py  ai_clients.py  cache.py  exceptions.py  permissions.py  storage.py  utils.py
tests/: conftest.py
(+26 files in other folders)
